<resources>
    <string name="app_name">SimpleCalendar</string>
    <string name="title">Title</string>
    <string name="create_new_event">Create new event</string>
    <string name="desc">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string-array name="DaysOfTheWeekRes">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>

    <string-array name="MonthsOfTheYearRes">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
