<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <import type="com.dbulawa.calendar.binding.Converters"/>
        <variable
            name="viewModel"
            type="com.dbulawa.calendar.ui.main.eventdetail.EventDetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_event"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/colorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:hint="@string/title"
            style="@style/AppTheme.EditTextWrap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                app:titleValidator="@{viewModel.event.title}"
                android:text="@={viewModel.event.title}"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/date"
            style="@style/AppTheme.EditTextWrap"
            app:layout_constraintTop_toBottomOf="@+id/eventTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                app:date="@{null}"
                android:text="@={Converters.dateToString(viewModel.event.date)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/time"
            style="@style/AppTheme.EditTextWrap"
            app:layout_constraintTop_toBottomOf="@+id/eventDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventTimeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                app:time="@{null}"
                android:text="@={Converters.timeToString(viewModel.event.time)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/desc"
            style="@style/AppTheme.EditTextWrap"
            app:layout_constraintTop_toBottomOf="@+id/eventTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.event.desc}"
                android:maxLength="500"
                android:maxLines="3"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button"
            android:text="Create"
            android:background="@color/colorWhite"
            android:onClick="@{() -> viewModel.insertEvent()}"
            android:paddingVertical="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>